# Case-Tecnico-Ferreira-Costa-Inteligencia-Comercial

./: .gitignore  Makefile  README.md  SDD.MD  pyproject.toml  requirements.txt
data/processed/: cobertura_estoque.parquet  dim_lojas.parquet  dim_precos.parquet  dim_produto.parquet  dim_unidades.parquet  dim_voltagem.parquet  estoque_final_projetado.parquet  (+2 more)
docs/: business_rules.md  data_contract.md  data_formatting_and_encoding.md  hypothesis_validation_matrix.md  index.html  inventory_reconciliation.md  metric_catalog.md  pricing_projection_recommendations.md  sales_store_category_assortment.md
reports/: relatorio_final.md
specs/: 00_current_state.md  01_ingestion_encoding_spec.md  02_data_contract_quality_spec.md  03_metrics_business_rules_spec.md  04_inventory_purchase_reconciliation_spec.md  05_sales_store_category_assortment_spec.md  06_pricing_projection_recommendations_spec.md  07_hypothesis_report_spec.md  08_tests_reproducibility_spec.md  09_dashboard_delivery_spec.md  implementation_plan.md
src/: 01_etl.py  02_estoque_projetado.py  02_quality_audit.py  03_analise_vendas.py  04_analise_estoque.py  05_precificacao.py  06_projecao_compras.py  07_recomendacoes.py  dashboard_build.py  inventory_reconciliation.py  io.py  metrics.py
tests/: test_assortment_analysis.py  test_dashboard.py  test_hypothesis_report.py  test_ingestion.py  test_inventory_reconciliation.py  test_metrics.py  test_outputs.py  test_pricing.py  test_projection.py  test_quality_checks.py  test_recommendations.py  test_sales_analysis.py  test_schema.py  test_specs_exist.py
(+62 files in other folders)
