[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "painel-resultados"
version = "0.8.0"
description = "Pipeline auditavel de vendas, estoque, precificacao, hipoteses e reprodutibilidade."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "pandera==0.32.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    ".pytest-tmp*",
    "data",
    "outputs",
    "reports",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
